--- a/customer-microservice-dev.properties
+++ b/customer-microservice-dev.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.auto-index-creation=true
 customer.property=Customer Profile Dev Updated
+spring.data.mongodb.uri=mongodb://localhost:27017/customers
+
 
