--- a/customer-microservice-prod.properties
+++ b/customer-microservice-prod.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.auto-index-creation=true
-customer.property=Customer Profile Prod Updated
-
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=customers
+spring.data.mongodb.authentication-database=admin
