--- a/customer-microservice-prod.properties
+++ b/customer-microservice-prod.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+customer.property=Customer Profile Prod Updated
+spring.data.mongodb.uri=mongodb://localhost:27017/customers
 spring.data.mongodb.database=customers
-spring.data.mongodb.authentication-database=admin
